--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -2,8 +2,8 @@ name: Update README with Random Quote
 
 on:
   schedule:
-    - cron: "0 */3 * * *"
-  workflow_dispatch:      
+    - cron: "0 0 * * *"
+  workflow_dispatch:  
 
 jobs:
   update-readme:
